--- a/Documentation/programOutline.tex
+++ b/Documentation/programOutline.tex
@@ -61,6 +61,7 @@
 			
 			\subsubsection{Reading from STL} % May potenially include other file types.
 			\subsubsection{Writing to STL} % May potenially include other file types.
+				Basic 
 			
 			\subsubsection{Reading from computer vision algorithm} 
 				This section will outline the binary file structure for the Computer model, how it's read in and its individual components. 
