--- a/Documentation/programOutline.tex
+++ b/Documentation/programOutline.tex
@@ -49,11 +49,9 @@
 				This will use keyboard and mouse input controls to modify view positions.
 				Current command options: 
 					\begin{enumerate}
-						\item click and drag (x,y,z) translation.
-						\item CTRL, click and drag, (x,y,z) rotation about a point (will have to work out how to define this). 
-						\item Scroll Up - translate into the screen (i.e. zoom in)
-						\item Scroll Down - translate out of the screen (i.e. zoom out)
-						\item CTRL, SHIFT, click and drag - select a region of nodes. 
+						\item hold 't' on keyboard and move mouse - Translation left and right.
+						\item hold 'r' on jeyboard and move mouse - Rotations x and y. 
+						\item hold 'z' on keyboard and move mouse - Zoom in and out.
 					\end{enumerate}
 		
 		\subsection{The Model}
